test/spec_vectors/data/ok/module_9.wat
(module (memory 1) (global i32 (i32.const 0)) (data (global.get 0) "a"))