test/spec_vectors/data/fail/module_62.wat
(module (memory 1) (data (global.get 0)))